1.  Should use MUL, DIV, ADD, SUB and EQ as operations symbols. 2.  Can do continuous arithmetic. 3.  Should not accept additional 0 characters if display is 0. 4.  All operations should be functioning. 5.  CLR should be functioning.

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ form input[type="button"]:hover {
 form .display {
   display: flex;
   justify-content: flex-end;
-  align-items: center; /* Added alignment */
+  align-items: center;
   margin: 5px 0px 15px 0px;
 }
 
@@ -44,8 +44,14 @@ form .display input {
   font-size: 40px;
   padding: 5px 10px;
   background-color: rgb(80, 77, 77);
-  border: none; /* Removed border */
+  border: none; 
   color: white;
   border-radius: 10px;
-  height: 60px; /* Added height */
+  height: 60px; 
+}
+form input[value="CLR"] {
+  width: calc(100% - 132px); 
+}
+form input[value="="] {
+  width: calc(100% - 132px);
 }
