--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,22 @@
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background: linear-gradient(140deg, rgb(223, 126, 36), rgb(221, 146, 48));
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 20px;
+  color: white;
+}
+
+.header h1 {
+  margin: 0;
+  font-size: 36px;
+  font-weight: bold;
 }
 
 .calculator {
@@ -49,9 +62,11 @@ form .display input {
   border-radius: 10px;
   height: 60px; 
 }
+
 form input[value="CLR"] {
   width: calc(100% - 196px); 
 }
-form input[value="="] {
-  width: calc(100% - 132px);
+
+form input[value="EQ"] {
+  width: calc(100% - 189 px);
 }
